--- a/ChachaT/Info.plist
+++ b/ChachaT/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Please allow Shuffle to access your camera, so you can use it within the app</string>
 	<key>Configuration</key>
 	<string>$(CONFIGURATION)</string>
 	<key>CFBundleDevelopmentRegion</key>
