--- a/ChachaT.xcodeproj/xcshareddata/xcschemes/Configurations Debug (Production).xcscheme
+++ b/ChachaT.xcodeproj/xcshareddata/xcschemes/Configurations Debug (Production).xcscheme
@@ -86,6 +86,7 @@
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
+      customArchiveName = "ShuffleHunt"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
